--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
 @charset 'utf-8';
 
 @import '~k-css/k.css';
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+  background-color: #e0e0e0;
+}
